--- a/client/src/elements/atoms/icon-button.html
+++ b/client/src/elements/atoms/icon-button.html
@@ -1,11 +1,11 @@
 <template bindable="icon, code, size, iconSize, tabindex" class="size-${size}">
   <require from="./icon-button.css"></require>
   <button tabindex.bind="tabindex">
-    <div class="icon-button__icon">
+    <span class="icon-button__icon">
       <box-icon if.bind="code || icon" code.bind="code" icon.bind="icon" size="${iconSize || size}"></box-icon>
-    </div>
-    <div class="icon-button__text">
+    </span>
+    <span class="icon-button__text">
       <slot></slot>
-    </div>
+    </span>
   </button>
 </template>
