feat: implement dynamicEnum and availabilityChecks for schema-editor properties

--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -2,6 +2,9 @@
   <require from="./schema-editor-wrapper"></require>
   <require from="./schema-editor-array.css"></require>
   <require from="../molecules/delete-button.html"></require>
+  <legend>
+    ${schema.title}
+  </legend>
   <div if.bind="data" repeat.for="entry of data" class="schema-editor-array__entry">
     <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable">
       <button-secondary icon="expand" size="small" if.bind="collapsedStates[$index] !== 'expanded'" click.delegate="expand($index)"></button-secondary>
