--- a/client/src/elements/schema-editor/schema-editor-color.html
+++ b/client/src/elements/schema-editor/schema-editor-color.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input" bindable="schema, data, change, required">
+<template class="schema-editor-input">
   <require from="./schema-editor-color.css"></require>
   <label>
     ${schema["title"]}
