--- a/client/src/elements/schema-editor/schema-editor-url.html
+++ b/client/src/elements/schema-editor/schema-editor-url.html
@@ -1,4 +1,4 @@
-<template bindable="schema, data, change, required">
+<template>
   <label>
     ${schema["title"]}
     <input type="url" required.bind="required" value.bind="data" keyup.delegate="change() & debounce:800">
