--- a/client/src/elements/schema-editor/schema-editor-select.html
+++ b/client/src/elements/schema-editor/schema-editor-select.html
@@ -1,4 +1,4 @@
-<template>
+<template class="schema-editor-input">
   <label>
     ${schema["title"]}
     <select value.bind="data" change.delegate="change()" if.bind="selectType === 'select'">
