--- a/client/src/elements/schema-editor/schema-editor.html
+++ b/client/src/elements/schema-editor/schema-editor.html
@@ -5,6 +5,7 @@
   <schema-editor-wrapper
       schema.bind="schema"
       data.two-way="data"
-      change.bind="change">
+      change.bind="change"
+      no-object-title="true">
   </schema-editor-wrapper>
 </template>
