--- a/client/src/elements/schema-editor/schema-editor-object.html
+++ b/client/src/elements/schema-editor/schema-editor-object.html
@@ -1,18 +1,16 @@
 <template>
     <require from="./schema-editor-wrapper"></require>
-
+    <legend if.bind="!noObjectTitle">
+      ${schema.title}
+    </legend>
     <div if.bind="schema.properties" repeat.for="propertyName of schema.properties | keys">
-      <fieldset if.bind="getType($parent.schema.properties[propertyName]) === 'object' || getType($parent.schema.properties[propertyName]) === 'array'" class="${isCompact($parent.schema.properties[propertyName]) ? 'compact' : ''}">
-        <legend if.bind="getType($parent.schema.properties[propertyName]) === 'object'">
-          ${$parent.schema.properties[propertyName].title}
-        </legend>
+      <fieldset if.bind="noFieldsets || getType($parent.schema.properties[propertyName]) === 'object' || getType($parent.schema.properties[propertyName]) === 'array'" class="${isCompact($parent.schema.properties[propertyName]) ? 'compact' : ''}">
         <schema-editor-wrapper
             if.bind="!$parent.schema.properties[propertyName]['Q:options'] || !$parent.schema.properties[propertyName]['Q:options'].hideInEditor"
             schema.bind="$parent.schema.properties[propertyName]"
             data.two-way="$parent.data[propertyName]"
             change.bind="$parent.change"
-            required.bind="isRequired($parent.schema, propertyName)"
-            is-available.bind="$parent.isAvailable">
+            required.bind="isRequired($parent.schema, propertyName)">
         </schema-editor-wrapper>
       </fieldset>
 
@@ -21,8 +19,7 @@
         schema.bind="$parent.schema.properties[propertyName]"
         data.two-way="$parent.data[propertyName]"
         change.bind="$parent.change"
-        required.bind="isRequired($parent.schema, propertyName)"
-        is-available.bind="$parent.isAvailable">
+        required.bind="isRequired($parent.schema, propertyName)">
       </schema-editor-wrapper>
 
     </div>
