Include changes from dev and adjust date handling accordingly

--- a/client/src/elements/schema-editor/schema-editor-wrapper.html
+++ b/client/src/elements/schema-editor/schema-editor-wrapper.html
@@ -62,7 +62,7 @@
   </div>
 
   <div if.bind="getType(schema) === 'date'" class="schema-editor-block">
-    <require from="./schema-editor-date.html"></require>
+    <require from="./schema-editor-date"></require>
     <schema-editor-date
       schema.bind="schema"
       data.two-way="data"
