--- a/client/src/elements/schema-editor/schema-editor-date.html
+++ b/client/src/elements/schema-editor/schema-editor-date.html
@@ -1,4 +1,4 @@
-<template class="schema-editor-input" bindable="schema, data, change, required">
+<template class="schema-editor-input">
   <label>
     ${schema["title"]}
     <input type="date" value.bind="data" required.bind="required" keyup.delegate="change() & debounce:800">
