removes drag and drop feature as it will not work with livingdocs integration

--- a/client/src/dialogs/item-dialog.html
+++ b/client/src/dialogs/item-dialog.html
@@ -3,7 +3,7 @@
   <require from="elements/item-preview/item-preview"></require>
   <div class="q-dialog item-dialog">
     <div class="q-dialog__content">
-      <item-preview if.bind="item.id" id.bind="item.id" on-drag.bind="handleDrag" target.two-way="currentTarget"></item-preview>
+      <item-preview if.bind="item.id" id.bind="item.id" target.two-way="currentTarget"></item-preview>
     </div>
     <aside class="q-dialog__controls">
       <div class="q-text-small q-text--light">
