--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -5,7 +5,7 @@
     <q-messages></q-messages>
     <div class="item-overview-container">
       <div class="item-overview__content">
-        <item-preview if.bind="itemId" id.bind="itemId" on-drag.bind="handleDrag" target.two-way="currentTarget"></item-preview>
+        <item-preview if.bind="itemId" id.bind="itemId" target.two-way="currentTarget"></item-preview>
       </div>
       <aside class="item-overview__controls">
         <div class="item-overview__status q-text-small q-text--light">
