--- a/client/src/app.html
+++ b/client/src/app.html
@@ -5,6 +5,7 @@
   <require from="./styles/fonts.css"></require>
   <require from="./styles/q-form.css"></require>
   <require from="./styles/app.css"></require>
+  <require from="./styles/notifications.css"></require>
 
   <div class="q-container ${env.PLAYGROUND ? 'q-container--playground' : ''}">
     <q-bar if.bind="user.isLoggedIn" router.bind="router"></q-bar>
