do not save on item modal open from editor

--- a/client/src/elements/organisms/tool-status-bar.html
+++ b/client/src/elements/organisms/tool-status-bar.html
@@ -4,6 +4,6 @@
   <icon-save-state class="tool-status-bar__item" is-saved.bind="item.isSaved"></icon-save-state>
 
   <button-secondary class="tool-status-bar__item" icon="save" if.bind="saveAction" click.delegate="saveAction()"></button-secondary>
-  <button-secondary class="tool-status-bar__item" icon="activate" if.bind="activateAction" click.delegate="onActivateClick()"></button-secondary>
+  <button-secondary class="tool-status-bar__item" icon="activate" click.delegate="onActivateClick()"></button-secondary>
   
 </template>
