--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -30,6 +30,6 @@
         <button ref="optionsFormSubmitButton" type="submit" style="display: none;"></button>
       </form>
     </div>
-    <tool-status-bar item.bind="item" save-action.call="userSave()" activate-action.call="openItemModal()"></tool-status-bar>
+    <tool-status-bar item.bind="item" save-action.call="userSave()"></tool-status-bar>
   </section>
 </template>
