--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -3,7 +3,7 @@
     <div if.bind="!isChrome" style="text-align: center; color: #FF0000;" t="general.browserSupportMessage"></div>
     <icon-logo style="width: 100px; height: 100px; margin: 50px auto 100px auto;"></icon-logo>
     <form class="q-form">
-      <p class="q-text" if.bind="loginMessage">${loginMessage}</p>
+      <p class="q-text" if.bind="loginMessage" innerhtml.bind="loginMessage"></p>
       <div class="q-form__block">
         <label>
           <span t="general.username"></span>
