--- a/client/src/icons/icon-save-state.html
+++ b/client/src/icons/icon-save-state.html
@@ -1,7 +1,15 @@
 <template bindable="isSaved" class="${isSaved ? 'state-saved' : 'state-unsaved'}">
   <require from="./icon-save-state.css"></require>
-  <box-icon if.bind="isSaved" icon="yes"></box-icon>
-  <box-icon if.bind="!isSaved" icon="no"></box-icon>
+
+  <svg xmlns="http://www.w3.org/2000/svg" class="${isSaved ? 'state-saved' : 'state-unsaved'}" viewBox="0 0 22 22">
+    <path d="M12.1 6c.07.348.177.682.316 1H8v4h6V9c.308.232.643.428 1 .584V12H7V7H4v14h2v-6h10v6h2V9.9c.348-.07.682-.177 1-.316V22H3V6h9.1zm.9 2v2h-2V8h2zm-6 8v5h8v-5H7zm1 1h6v1H8v-1zm0 2h6v1H8v-1z"/>
+    <path if.bind="!isSaved" d="M16 5l-2 2 1 1 2-2 2 2 1-1-2-2 2-2-1-1-2 2-2-2-1 1 1.76 1.76zm1 5a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>
+    <path if.bind="isSaved" d="M17 10a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm-3-5l2 2 4-4-1-1-3 3-1-1-1 1z"/>
+  </svg>
+
+
+  <!--<box-icon if.bind="isSaved" icon="yes"></box-icon>
+  <box-icon if.bind="!isSaved" icon="no"></box-icon>-->
   <!--<svg if.bind="isSaved" class="state-saved" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M0 7l4 4 8-8-2-2-6 6-2-2z" fill-rule="evenodd"/></svg>-->
   <!--<svg if.bind="!isSaved" class="state-unsaved" viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg"><path d="M8 6l4-4-2-2-4 4-4-4-2 2 4 4-4 4 2 2 4-4 4 4 2-2z" fill-rule="evenodd"/></svg>-->
 </template>
