--- a/client/src/elements/schema-editor/schema-editor-color.html
+++ b/client/src/elements/schema-editor/schema-editor-color.html
@@ -2,6 +2,6 @@
   <require from="./schema-editor-color.css"></require>
   <label>
     ${schema["title"]}
-    <input type="color" value.bind="data" required.bind="required" change.delegate="change()">
+    <input type="color" value.bind="data" required.bind="required" change.delegate="change() & debounce:500">
   </label>
 </template>
