--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -10,7 +10,7 @@
           <label class="q-text-small q-text--light">${ 'general.articlesWithThisGraphic' & t }</label>
           <ul>
             <li repeat.for="article of articlesWithItem">
-              <a class="q-text" href="${article.url}">${article.title} (${article.publicationLastUpdated | timeAgo})</a>
+              <a class="q-text" target="_blank" rel="noopener" href="${article.url}">${article.title} (${article.publicationLastUpdated | timeAgo})</a>
             </li>
           </ul>
         </div>
