feat(edited-by-info): show edited by info in item-overview sidebar

--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -18,8 +18,10 @@
       <aside class="item-overview__controls">
         <div class="item-overview__status q-text-small q-text--light">
           <icon-active-state class="tool-status-bar__item" is-active.bind="item.conf.active"></icon-active-state>
-          <span>${ 'general.created' & t } ${ item.conf.createdDate & timeAgo:7*24*60*60 }<br>
-          ${ 'general.by' & t } ${item.conf.createdBy}</span>
+          <div>${ 'general.created' & t } ${ item.conf.createdDate & timeAgo:7*24*60*60 }<br>
+          ${ 'general.by' & t } ${item.conf.createdBy}</div>
+          <div if.bind="item.conf.updatedDate">${ 'general.edited' & t } ${ item.conf.updatedDate & timeAgo:7*24*60*60 }<br>
+            ${ 'general.by' & t } ${item.conf.updatedBy}</div>
         </div>
 
         <button-secondary if.bind="!item.conf.active" click.delegate="activateItem()" icon="activate">
