--- a/client/src/elements/schema-editor/schema-editor-geojson-point.html
+++ b/client/src/elements/schema-editor/schema-editor-geojson-point.html
@@ -12,11 +12,11 @@
     <div class="lat-lng-input">
       <label>
         Latitude
-        <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker(true)">
+        <input type="number" step="any" value.bind="data.geometry.coordinates[1] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
       <label>
         Longitude
-        <input type="number" step="any" value.bind="data.geometry.coordinates[0] | forceNumber" input.delegate="updateMarker(true)">
+        <input type="number" step="any" value.bind="data.geometry.coordinates[0] | forceNumber" input.delegate="updateMarker(true)" required.bind="isRequired(schema.properties.geometry, 'coordinates')">
       </label>
     </div>
   </div>
