feat(preview): preview background is configurable by target

--- a/client/src/elements/item-preview/preview-container.html
+++ b/client/src/elements/item-preview/preview-container.html
@@ -1,4 +1,4 @@
-<template>
+<template css="background-color: ${target.preview.background.color ? target.preview.background.color : 'white'};">
   <require from="./preview-container.css"></require>
   <style>
     .container {
