--- a/client/src/elements/item-preview/item-preview.html
+++ b/client/src/elements/item-preview/item-preview.html
@@ -17,6 +17,6 @@
     </div>
   </form>
   <p class="q-text q-text--error" if.bind="errorMessage">${errorMessage}</p>
-  <preview-container ref="previewContainer" width.bind="previewWidthProxy.width" rendering-info.bind="renderingInfo"></preview-container>
+  <preview-container ref="previewContainer" width.one-way="previewWidthProxy.width" rendering-info.one-way="renderingInfo" target.one-way="targetProxy.target"></preview-container>
   
 </template>
