--- a/client/src/elements/organisms/meta-editor.html
+++ b/client/src/elements/organisms/meta-editor.html
@@ -1,6 +1,6 @@
 <template>
   <form class="q-form">
-    <label for="publication" if.bind="publications.length > 0">Publikation</label>
+    <label for="publication" if.bind="publications.length > 0">${ 'metaEditor.publication' & t }</label>
     <div class="q-select" if.bind="publications.length > 0">
       <select name="publication" value.bind="data.publication">
         <option value="default"></option>
@@ -14,7 +14,7 @@
         <option repeat.for="department of departments" value.bind="department">${department}</option>
       </select>
     </div>
-    <label class="q-text-small q-text--light">Annotationen
+    <label class="q-text-small q-text--light">${ 'metaEditor.annotations' & t }
       <textarea value.bind="data.annotations" style="height: 150px;"></textarea>
     </label>
   </form>
