--- a/client/src/elements/schema-editor/schema-editor-array.html
+++ b/client/src/elements/schema-editor/schema-editor-array.html
@@ -6,7 +6,7 @@
     ${schema.title}
   </legend>
   <div if.bind="data" repeat.for="entry of data" class="schema-editor-array__entry" style="z-index: ${data.length - $index}">
-      <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable && isEntryAvailable(entry) & async">
+      <div class="schema-editor-array__collapsecontrol" if.bind="options.expandable && isEntryAvailable($index) & async">
         <button-secondary icon="expand" size="small" if.bind="collapsedStates[$index] !== 'expanded'" click.delegate="expand($index)"></button-secondary>
         <button-secondary icon="collapse" size="small" if.bind="collapsedStates[$index] === 'expanded'" click.delegate="collapse($index)"></button-secondary>
 
@@ -20,8 +20,8 @@
         </div>
       </div>
       <schema-editor-wrapper
-          if.bind="(collapsedStates[$index] === 'expanded' || !options.expandable) && isEntryAvailable(entry) & async"
-          schema.bind="$parent.getSchemaForArrayEntry(data[$index])"
+          if.bind="(collapsedStates[$index] === 'expanded' || !options.expandable) && isEntryAvailable($index) & async"
+          schema.bind="dataItemsSchemas[$index]"
           data.two-way="data[$index]"
           change.bind="$parent.handleChange"
           no-object-title="true">
