(login window): set focus to username input on load, hide error before sending login credentials

--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -7,7 +7,7 @@
       <div class="q-form__block">
         <label>
           <span t="general.username"></span>
-          <input type="text" id="username" value.bind="username">
+          <input type="text" id="username" value.bind="username" ref="usernameInput">
         </label>
       </div>
       <div class="q-form__block">
