add type="button" to all buttons by default to have them not submit a form

--- a/client/src/elements/atoms/button-no.html
+++ b/client/src/elements/atoms/button-no.html
@@ -1,4 +1,4 @@
-<template bindable="icon, code, size, iconSize" class="button">
+<template bindable="icon, code, size, iconSize, type" class="button">
   <require from="./button-no.css"></require>
   <icon-button icon.bind="icon" code.bind="code" size.bind="size" icon-size.bind="iconSize"><slot></slot></icon-button>
 </template>
