fix login form button to have type="submit"

--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -19,7 +19,7 @@
       <p class="q-text q-text--error" if.bind="loginError">
         ${loginError}
       </p>
-      <button-primary click.delegate="tryLogin()"><span t="general.login"></span></button-primary>
+      <button-primary click.delegate="tryLogin()" type="submit"><span t="general.login"></span></button-primary>
     </form>
   </main>
 </template>
