--- a/client/src/elements/schema-editor/schema-editor-textarea.html
+++ b/client/src/elements/schema-editor/schema-editor-textarea.html
@@ -1,6 +1,6 @@
 <template class="schema-editor-input">
   <label>
     ${schema["title"]}
-    <textare value.bind="data" placeholder.to-view="options.placeholder || ''" required.bind="required" input.delegate="change() & debounce:800"></textare>
+    <textarea value.bind="data" placeholder.to-view="options.placeholder || ''" required.bind="required" input.delegate="change() & debounce:800"></textarea>
   </label>
 </template>
