Move q-status-bar to q-bar

--- a/client/src/elements/organisms/q-bar.html
+++ b/client/src/elements/organisms/q-bar.html
@@ -1,7 +1,8 @@
 <template>
   <require from="./q-bar.css"></require>
   <section class="q-bar__left">
-    <slot name="q-bar__back"></slot>
+    <slot name="back-button"></slot>
+    <slot name="tool-status-bar"></slot>
   </section>
   <section class="q-bar__center">
     <icon-logo></icon-logo>
