--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -4,9 +4,10 @@
   <require from="elements/item-preview/item-preview"></require>
   <require from="elements/organisms/tool-status-bar"></require>
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
-    <a slot="q-bar__back" route-href="route: index">
+    <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="big"></button-secondary>
     </a>
+    <tool-status-bar slot="tool-status-bar" item.bind="item" save-action.call="userSave()"></tool-status-bar>
   </q-bar>
   <section class="editor">
     <main>
@@ -35,6 +36,5 @@
         <button ref="optionsFormSubmitButton" type="submit" style="display: none;"></button>
       </form>
     </div>
-    <tool-status-bar item.bind="item" save-action.call="userSave()"></tool-status-bar>
   </section>
 </template>
