--- a/client/src/pages/feed.html
+++ b/client/src/pages/feed.html
@@ -2,7 +2,7 @@
   <require from="./feed.css"></require>
   <require from="../elements/item-preview/preview-container"></require>
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
-    <a slot="q-bar__back" route-href="route: index">
+    <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="big"></button-secondary>
     </a>
   </q-bar>
