--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -3,7 +3,7 @@
   <require from="./item-overview.css"></require>
 
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
-    <a slot="q-bar__back" route-href="route: index">
+    <a slot="back-button" class="q-bar__back" route-href="route: index">
       <button-secondary icon="back" icon-size="big"></button-secondary>
     </a>
   </q-bar>
