Show logo only on index page

--- a/client/src/elements/organisms/q-bar.html
+++ b/client/src/elements/organisms/q-bar.html
@@ -5,7 +5,7 @@
     <slot name="tool-status-bar"></slot>
   </section>
   <section class="q-bar__center">
-    <icon-logo></icon-logo>
+    <slot name="logo"></slot>
   </section>
   <section class="q-bar__right">
     <language-switcher></language-switcher>
