Redesign preview width picker

--- a/client/src/elements/molecules/radio-button-group.html
+++ b/client/src/elements/molecules/radio-button-group.html
@@ -3,7 +3,7 @@
   <div class="radio-button-group__option" repeat.for="option of options">
     <input type="radio" id="button-${option.value}" value.bind="option.value" checked.bind="value" matcher.bind="valueMatcher">
     <label for="button-${option.value}">
-      <compose if.bind="option.icon" view="icons/icon-${option.icon}.html"></compose>
+      ${option.text}
     </label>
   </div>
 </template>
