user created the item now able to delete it (#102)
* user created the item now able to delete it

* (chore) remove whitespace

--- a/client/src/elements/molecules/item-list-entry.html
+++ b/client/src/elements/molecules/item-list-entry.html
@@ -13,7 +13,7 @@
   </span>
 
   <delete-button
-    if.bind="user.roles.includes('poweruser')"
+    if.bind="user.roles.includes('poweruser') || user.username === item.conf.createdBy"
     size="small"
     action.call="deleteItem()"
     button-type="secondary"
