Add updated back button

--- a/client/src/icons/icon-back.html
+++ b/client/src/icons/icon-back.html
@@ -1,5 +1,9 @@
 <template>
-  <svg style="transform: rotate(180deg);" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 52 52">
-    <polygon points="28.71,18.29 27.29,19.71 32.59,25 17,25 17,27 32.59,27 27.29,32.29 28.71,33.71 36.41,26"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14">
+    <g fill="none" fill-rule="evenodd">
+      <rect width="14" height="14" />
+      <polyline stroke="#393855" stroke-width="2" points="-.761 10.081 5.91 3.928 12.581 10.081" transform="rotate(-90 5.91 7.004)"
+      />
+    </g>
   </svg>
 </template>
