--- a/client/src/pages/editor.html
+++ b/client/src/pages/editor.html
@@ -5,7 +5,7 @@
   <require from="elements/organisms/tool-status-bar"></require>
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
     <a slot="back-button" class="q-bar__back" route-href="route: index">
-      <button-secondary icon="back" icon-size="big"></button-secondary>
+      <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
     <tool-status-bar slot="tool-status-bar" item.bind="item" save-action.call="userSave()"></tool-status-bar>
   </q-bar>
