--- a/client/src/pages/item-overview.html
+++ b/client/src/pages/item-overview.html
@@ -4,7 +4,7 @@
 
   <q-bar if.bind="user.isLoggedIn" router.bind="router">
     <a slot="back-button" class="q-bar__back" route-href="route: index">
-      <button-secondary icon="back" icon-size="big"></button-secondary>
+      <button-secondary icon="back" icon-size="medium"></button-secondary>
     </a>
   </q-bar>
   <main class="item-overview">
